commit week-2 assignments due to deadline

--- a/week-2/index.html
+++ b/week-2/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>week-1</title>
+    <title>week-2</title>
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,8 +20,21 @@
 </head>
 
 <body>
+    <section class="menu">
+        <span class="material-icons menu-clear">
+            clear
+            </span>
+        <ul>
+            <li class="menu-item">Item 1</li>
+            <li class="menu-item">Item 2</li>
+            <li class="menu-item">Item 3</li>
+            <li class="menu-item">Item 4</li>
+        </ul>
+    </section>
+    <!-- END-menu -->
+
     <header class="main-header">
-        <p><a href="#">Website Title/Logo</a></p>
+        <p><a href="index.html">Website Title/Logo</a></p>
         <div class="main-nav-display">
             <ul class="main-nav">
                 <li><a href="#">Item 1</a></li>
@@ -51,13 +64,23 @@
                 <li class="content-box">Content Box 4</li>
             </ul>
             <a href="#" class="btn">Call to Action</a>
+        </div> 
+        <div style="display: none;" class="display-container">
+            <div class="row">
+                <ul class="wrap">
+                    <li class="content-box">Content Box 1</li>
+                    <li class="content-box">Content Box 2</li>
+                    <li class="content-box">Content Box 3</li>
+                    <li class="content-box">Content Box 4</li>
+                </ul>
+            </div>
         </div>
     </main>
     <!-- END-main-content -->
 
 
 
-
+    <script src="js/all.js"></script>
 </body>
 
 </html>
