week-3 assignment-3 has a little problem

--- a/week-3/public/sum.html
+++ b/week-3/public/sum.html
@@ -8,11 +8,14 @@
 </head>
 <body>
     <h1>Get Data</h1>
-    <form action="getData" method="get">
-        <label for="getNumber"></label>
-        <input type="text" name="number" id="getNumber">
-        <input type="submit" value="submit">
+    <form action="" method="GET">
+        <label for="number"></label>
+        <input type="text" name="number" id="number">
+        <input type="submit" value="submit" id="submitBtn">
     </form>
+    <div class="input"></div>
+
+</div>
 </body>
 <script src="js/getAJAX.js"></script>
 </html>
