Commit week-4 and assignment-3 only re-creat layout

--- a/week-4/indexForAns.html
+++ b/week-4/indexForAns.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <script src="js-answer/assignment-1.js"></script>
+    <div class="div1"></div>
+    <script src="js-answer/assignment-2.js"></script>
 </body>
 </html>
